--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,6 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="sidebar" id="sidebar">
         <nav>
-<<<<<<< HEAD
             <ul class="midnightHeader default"><li class="active">
                     <a class="midnightHeader btn-menu" href="/" data-text="deposer un projet"><div>deposer un projet</div></a></li>
                 <li><a class="btn-menu" href="/" data-text="Voir les artistes"><div>Voir les artistes</div></a></li>
@@ -40,8 +39,6 @@
 
 
 
-
-=======
             <ul>
                 <li><a class="btn-menu nav-projet" href="/" data-text="deposer un projet">deposer un projet</a>
                     <div id="div-projet">deposer un projet</div>
@@ -56,7 +53,6 @@
                     <div id="div-contact">Contact</div>
                 </li>
             </ul>
->>>>>>> c657607edc13518d9f9002a81b572fd83ead44c0
         </nav>
     </div>
 
@@ -66,7 +62,6 @@
     </div>
 
     <footer>
-<<<<<<< HEAD
         <ul>
             <li>© Lugh</li>
             <li>Presse</li>
@@ -80,7 +75,6 @@
             <li>Instagram</li>
             <li>Linkedin</li>
             <li>Medium</li>
-=======
         <div id="copyright">
             <ul>
                 <li>© Lugh</li>
@@ -98,7 +92,6 @@
             </ul>
         </div>
     </footer>
->>>>>>> c657607edc13518d9f9002a81b572fd83ead44c0
 
 
 
@@ -162,9 +155,7 @@
         </script>
     <script>
 
-<<<<<<< HEAD
-=======
-        /*$('.btn-menu').mouseover(function(){
+        $('.btn-menu').mouseover(function(){
             document.getElementById('fullscreen').classList.add('fullscreen-hover');
         })
         $('.btn-menu').mouseout(function(){
@@ -182,8 +173,7 @@
        $('.btn-menu').mouseout(function(){
            document.getElementById('fullscreen').classList.remove('fullscreen-hover')
 
-       })*/
->>>>>>> c657607edc13518d9f9002a81b572fd83ead44c0
+       })
 
     </script>
 
