--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -13,14 +13,12 @@ body{
 }
 
 .sidebar {
-    position: fixed;
-    width: 6.25vw;
+    position: absolute;
     z-index: 300;
-    /* height: 100%; */
-    right: 0;
+    right: 30%;
     top: 0;
-    padding-top: 4vh;
     height: 80vh;
+    margin-top: 10vh;
 }
 
 .sidebar nav ul {
@@ -41,10 +39,9 @@ body{
     text-decoration: none;
     margin: 0 auto;
     padding: 10px 20px;
-    width: 40px;
     position: relative;
-    color: white;
-    font-size: 1vw;
+    color: #000;
+    font-size: 0.8vw;
     text-transform:  uppercase;
     writing-mode: vertical-lr;
     -webkit-transform: rotate(180deg);
@@ -102,104 +99,113 @@ body{
 }*/
 
 #div-projet {
-    background-color: black;
-    color: white;
-    padding-left: 50%;
-    width: 260px;
+    background-color: white;
+    color: #000;
+    width: 0;
     height: 100vh;
     font-size: 30px;
     line-height: 10vh;
-    font-weight:  700;
+    font-weight: 700;
+    padding-right: 1vw;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: -300px;
-    display: block;
+    right: 0;
     z-index: 201;
     transition: 0.7s;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .nav-projet:hover + #div-projet {
-    right: 0;
     transition: 0.7s;
+    width: 30%;
+    visibility: visible;
+    opacity: 0.8;
+
 
 }
 
 
 
 #div-voir {
-    background-color: black;
-    color: white;
-    padding-top: 260%;
-    padding-left: 50%;
-    width: 260px;
+    background-color: white;
+    color: #000;
+    width: 0;
     height: 100vh;
     font-size: 30px;
     line-height: 10vh;
-    font-weight:  700;
+    font-weight: 700;
+    padding-right: 1vw;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: -300px;
-    display: block;
+    right: 0;
     z-index: 201;
     transition: 0.7s;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .nav-voir:hover + #div-voir {
-    right: 0;
     transition: 0.7s;
+    width: 30%;
+    visibility: visible;
+    opacity: 0.8;
 }
 
 
 
 
 #div-connexion {
-    background-color: black;
-    color: white;
-    padding-top: 480%;
-    padding-left: 50%;
-    width: 260px;
+    background-color: white;
+    color: #000;
+    width: 0;
     height: 100vh;
     font-size: 30px;
     line-height: 10vh;
-    font-weight:  700;
+    font-weight: 700;
+    padding-right: 1vw;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: -300px;
-    display: block;
+    right: 0;
     z-index: 201;
     transition: 0.7s;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .nav-connexion:hover + #div-connexion {
-    right: 0;
     transition: 0.7s;
+    width: 30%;
+    visibility: visible;
+    opacity: 0.8;
 }
 #div-contact {
-    background-color: black;
-    color: white;
-    padding-top: 650%;
-    padding-left: 50%;
-    width: 260px;
+    background-color: white;
+    color: #000;
+    width: 0;
     height: 100vh;
     font-size: 30px;
     line-height: 10vh;
-    font-weight:  700;
+    font-weight: 700;
+    padding-right: 1vw;
     text-transform: uppercase;
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: -300px;
-    display: block;
+    right: 0;
     z-index: 201;
     transition: 0.7s;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .nav-contact:hover + #div-contact {
-    right: 0;
     transition: 0.7s;
-
+    width: 30%;
+    visibility: visible;
+    opacity: 0.8;
 }
 
 .all-content {
@@ -225,16 +231,23 @@ body{
 
 
 h1{
-    margin: auto;
-    width: 50%;
-    font-size: 2vw;
-    margin-top: 2%;
-    text-align: center;
+    margin-bottom: 0.8vw;
+
+
+}
+.orange{
+    color: #FDA229;
+}
+.blue{
+    color: #679BD7;
 }
 
 #div-logo{
-    width: 30%;
+    width: 7%;
     margin: auto;
+    position: absolute;
+    top: 2vw;
+    left: 2vw;
 }
 
 .section-home{
@@ -245,15 +258,98 @@ h1{
 #first-section-content{
     margin-top: auto;
     margin-bottom: auto;
-    width: 100%;
+    width: 70%;
+    margin-left: 3vw;
+
+}
+#first-section-content h2{
+    font-size: 1.8vw;
+    line-height: 2.8vw;
+    font-weight: 600;
+}
+#first-section-content-2{
+    background-image: url("../img/IMG1-HOME.jpg");
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+#div-btn-artent{
+    margin-top: 3vw;
+    justify-content: space-between;
+}
+#div-btn-artent a{
+    background-color: #fff;
+    padding: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: 3px solid black;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.8vw;
+    margin-right: 2vw;
+    cursor: pointer;
+    text-decoration: none;
+    color: #000;
+
+}
+.div-btn-proj{
+    margin-top: 3vw;
+
+}
+.div-btn-proj button{
+    background-color: #fff;
+    padding: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: 3px solid black;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.8vw;
+    margin-right: 2vw;
+    cursor: pointer;
+
 }
 
-#second-section-content{
+.second-section-content{
+    margin-top: auto;
+    margin-bottom: auto;
     width: 70%;
-    margin: auto;
-    font-size: 2.2vw;
-    text-align: center;
-    font-weight: 700;
+    margin-left: 3vw;
+}
+.second-section-content h3{
+    font-size: 1.9vw;
+    line-height: 2.8vw;
+    margin-bottom: 3vw;
+}
+.second-section-content p{
+    font-size: 1vw;
+    line-height: 1.5vw;
+    width: 50%;
+    font-weight: 500;
+}
+#second-section-content-2{
+    background-image: url("../img/IMG2-HOME-ENTREPRISE.jpg");
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+#third-section-content-2{
+    background-image: url("../img/IMG4-HOME-ARTISTE.jpg");
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+#five-section-content-2{
+    background-image: url("../img/IMG3-HOME-GALLERIE.jpg");
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+#fourth-section-content-2{
+    background-image: url("../img/IMG5-HOME-NEWSLETTER.jpg");
+    width: 30%;
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 #third-section-content{
@@ -273,19 +369,8 @@ h1{
 }
 
 
-#second-section {
-    background-color: black;
-    background-image: url(../img/background1.svg);
-    color: #ffff;
-    background-size: contain;
-}
 
-#fourth-section{
-    background-color: #679BD7;
-    background-image: url(../img/background2.svg);
-    color: #ffff;
-    background-size: contain;
-}
+
 
 #monkey{
     width: 3%;
@@ -312,30 +397,46 @@ h1{
 /* FORM MAIL */
 
 .mc-field-group{
-    width: 60%;
-    display: block;
-    margin: auto;
-    margin-top: 3%;
+    text-align: left;
+
+}
+form h3{
+    text-align: left;
+    font-size: 1.9vw;
+    line-height: 2.8vw;
+    margin-bottom: 3vw;
+    font-weight: 600;
 }
 
 #mce-EMAIL{
-    width: 80%;
     border: none;
-    border-radius: 0.8vw;
-    padding: 5%;
+    border-bottom: 3px solid black;
+    width: 30%;
+    padding: 0.8%;
 }
 
 ::placeholder{
-    font-size: 1.2vw;
-    color: #9B9B9B;
+
     margin-left: 5%;
+    font-size: 1vw;
+    color: #000;
 }
 
 #mce-EMAIL[type=text]{
     font-size:30px;
-    color: #9B9B9B;
 }
-
+#mc-embedded-subscribe{
+    background-color: #fff;
+    padding: 7%;
+    padding-top: 0.8%;
+    padding-bottom: 0.8%;
+    border: 3px solid black;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.8vw;
+    margin-left: 1vw;
+    cursor: pointer;
+}
 #clear{
     position: relative;
     width: 54%;
@@ -343,18 +444,8 @@ h1{
     height: 30px;
 }
 
-#mc-embedded-subscribe{
-    position: absolute;
-    right: 3%;
-    top: -157%;
-    border:  none;
-    /* background-color:  #679BD7; */
-    background-color: transparent;
-    background-image: url("../img/mail.svg");
-    width: 2vw;
-    height: 2vw;
-    cursor: pointer;
-    background-size: 100%;
+#mc_embed_signup_scroll{
+margin-left: 3vw;
 }
 
 #copyright {
@@ -368,7 +459,7 @@ h1{
 
 #rs a{
     text-decoration: underline;
-    color: white;
+    color: #000000;
     padding: 8%;
 }
 
@@ -379,6 +470,7 @@ footer{
     background-color: transparent;
     position: absolute;
     bottom: 0;
+    color : #000000;
 }
 
 footer ul{
@@ -386,7 +478,6 @@ footer ul{
     list-style: none;
     font-weight: 700;
     padding: 1%;
-    color: #fff;
     justify-content: space-around;
 }
 
@@ -443,10 +534,7 @@ label{
     margin-top: 6%;
 }
 
-form h3{
-    text-align: center;
-    font-size: 1.3vw;
-}
+
 
 .btn-primary{
     background-color: #679BD7 ;
