--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -5,6 +5,7 @@
 }
 body{
     position: relative;
+
 }
 
 .section{
@@ -106,7 +107,7 @@ body{
     font-size: 30px;
     line-height: 10vh;
     font-weight: 700;
-    padding-right: 1vw;
+    padding-left: 1vw;
     text-transform: uppercase;
     position: fixed;
     top: 0;
@@ -136,7 +137,7 @@ body{
     font-size: 30px;
     line-height: 10vh;
     font-weight: 700;
-    padding-right: 1vw;
+    padding-left: 1vw;
     text-transform: uppercase;
     position: fixed;
     top: 0;
@@ -165,7 +166,7 @@ body{
     font-size: 30px;
     line-height: 10vh;
     font-weight: 700;
-    padding-right: 1vw;
+    padding-left: 1vw;
     text-transform: uppercase;
     position: fixed;
     top: 0;
@@ -190,7 +191,7 @@ body{
     font-size: 30px;
     line-height: 10vh;
     font-weight: 700;
-    padding-right: 1vw;
+    padding-left: 1vw;
     text-transform: uppercase;
     position: fixed;
     top: 0;
@@ -290,6 +291,7 @@ h1{
     cursor: pointer;
     text-decoration: none;
     color: #000;
+    outline: none;
 
 }
 .div-btn-proj{
@@ -699,4 +701,10 @@ margin-top: 5%}
     transition: 0.5s;
     cursor: pointer;
     font-weight: 500;
+}
+#footer{
+    display: flex;
+}
+#body{
+    background-color: #fff;
 }
