--- a/public/assets/css/normalize.css
+++ b/public/assets/css/normalize.css
@@ -55,6 +55,14 @@
     left: 0;
   }
 
+  #connexion-section-2 {
+    width: 100%;
+    height: 30%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
   h1 {
     font-size: 4vw;
   }
@@ -174,9 +182,7 @@
     position: absolute;
     background-color: white;
     transition: 0.5s;
-    padding-top: 4%;
-    display: block;
-    transition: 0.5s;
+    display: none;
     text-align: center;
     padding-top: 36%;
   }
@@ -188,6 +194,8 @@
     right: 0;
     transition: 0.5s;
     position: absolute;
+    z-index: 300;
+    display: block;
   }
 
   .nav-mobile a {
@@ -301,9 +309,139 @@
     font-size: 3.5vw;
   }
 
+  #form-ins {
+    width: 80%;
+    margin: auto;
+    margin-top: 4%;
+  }
+
+  .form-group-ins input {
+    border: none;
+    border-bottom: 2px solid black;
+    width: 95%;
+    padding: 2.8%;
+    margin-top: 6%;
+  }
+
+  .form-group-ins button {
+    background-color: #fff;
+    padding: 6%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    border: 2px solid black;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 3.4vw;
+    margin-left: 30vw;
+    margin-top: 13%;
+    cursor: pointer;
+    width: 60%;
+  }
+
+
+  #check-box {
+    display: flex;
+    margin-top: 3%;
+    margin-left: -10%;
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .div-check {
+    display: flex;
+    font-size: 3.5vw;
+    flex-direction: row;
+    width: 89%;
+    margin-top: 3%;
+    margin-left: -12%;
+  }
+
+  #submit-ins {
+    width: 100%;
+    margin-top: 5%;
+    margin-left: -20%;
+  }
+}
+
+
+@media only screen and (min-width: 680px) and (max-width: 1024px) {
+
+  #first-section-content-2 {
+    width:45%;
+  }
+  #second-section-content-2 {
+    width:45%;
+  }
+  #third-section-content-2 {
+    width:45%;
+  }
+  #fourth-section-content-2 {
+    width:45%;
+  }
+  #five-section-content-2 {
+    width:45%;
+  }
+  #connexion-section-2 {
+    width:45%;
+  }
+
+  .sidebar {
+    position: absolute;
+    z-index: 300;
+    right: 14%;
+    top: 8%;
+    height: 80vh;
+    margin-top: 10vh;
+  }
 
 
 }
 
 
 
+@media only screen and (min-width: 1680px) {
+
+  #first-section-content-2 {
+    width:37%;
+  }
+  #second-section-content-2 {
+    width:37%;
+  }
+  #third-section-content-2 {
+    width:37%;
+  }
+  #fourth-section-content-2 {
+    width:37%;
+  }
+  #five-section-content-2 {
+    width:37%;
+  }
+  #connexion-section-2 {
+    width:37%;
+  }
+
+  .sidebar {
+    right: 26%;
+  }
+
+  .singe-entreprise {
+    width: 20%;
+  }
+
+  .singe-artiste {
+    width: 20%;
+  }
+
+  .singe-galerie {
+    width: 20%;
+  }
+
+  .singe-connexion {
+    width: 20%;
+  }
+
+  .singe-contact {
+    width: 20%;
+  }
+
+}
