redirection bouton home

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,8 +12,8 @@
         <h2>La plateforme créative qui réunit<br>
             <span class="orange">artistes</span> et <span class="blue">entreprises</span></h2>
             <div id="div-btn-artent">
-                <a href="#second-section" class="js-section-scroll">Je suis une entreprise</a>
-                <a href="#third-section" class="js-section-scroll">Je suis un artiste</a>
+                <a href="#slide2" class="js-scrollTo">Je suis une entreprise</a>
+                <a href="#slide3" class="js-scrollTo">Je suis un artiste</a>
             </div>
 
         </div>
