--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -190,6 +190,17 @@
             });
 
 
+
+            $(document).ready(function() {
+                $('.js-scrollTo').on('click', function() { // Au clic sur un élément
+                    var page = $(this).attr('href'); // Page cible
+                    var speed = 750; // Durée de l'animation (en ms)
+                    $('html, body').animate( { scrollTop: $(page).offset().top }, speed ); // Go
+                    return false;
+                });
+            });
+
+
         $('.nav-burger').on('click', function() {
             $('.nav-mobile').addClass('burger-active');
         });
