--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -142,11 +142,12 @@
                 if (window.location.hash == '#slide2') {
                     $('.singe-artiste').addClass('singe-active');
                     $('.link-artiste').addClass('link-active');
-
+                    $('.second-section-content').addClass('position-finale');
                 }
                 else {
                     $('.singe-artiste').removeClass('singe-active');
                     $('.link-artiste').removeClass('link-active');
+                    $('.second-section-content').removeClass('position-finale');
                 }
             });
 
@@ -155,11 +156,12 @@
                 if (window.location.hash == '#slide3') {
                     $('.singe-galerie').addClass('singe-active');
                     $('.link-galerie').addClass('link-active');
-
+                    $('.third-section-content').addClass('position-finale');
                 }
                 else {
                     $('.singe-galerie').removeClass('singe-active');
                     $('.link-galerie').removeClass('link-active');
+                    $('.third-section-content').removeClass('position-finale');
                 }
             });
 
@@ -168,11 +170,12 @@
                 if (window.location.hash == '#slide4') {
                     $('.singe-connexion').addClass('singe-active');
                     $('.link-connexion').addClass('link-active');
-
+                    $('.five-section-content').addClass('position-finale');
                 }
                 else {
                     $('.singe-connexion').removeClass('singe-active');
                     $('.link-connexion').removeClass('link-active');
+                    $('.five-section-content').removeClass('position-finale');
                 }
             });
 
@@ -181,11 +184,12 @@
                 if (window.location.hash == '#slide5') {
                     $('.singe-contact').addClass('singe-active');
                     $('.link-contact').addClass('link-active');
-
+                    $('.fourth-section-content').addClass('position-finale');
                 }
                 else {
                     $('.singe-contact').removeClass('singe-active');
                     $('.link-contact').removeClass('link-active');
+                    $('.fourth-section-content').removeClass('position-finale');
                 }
             });
 
