--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -37,7 +37,7 @@
     </section>
     <section id="third-section" class="section reveal" data-midnight="black" data-anchor="slide3">
 
-        <div class="second-section-content">
+        <div class="third-section-content">
         <h3>CRÉEZ ET EXPOSEZ<br>
             SANS RIEN DÉPENSER !</h3>
             <p>Vous souhaitez mettre en avant votre <span class="orange">talent</span> et bénéficiez d’une <span class="orange">exposition</span> ?<br><br>
@@ -54,7 +54,7 @@
     </section>
         <section id="five-section" class="section reveal" data-midnight="white" data-anchor="slide4">
 
-            <div class="second-section-content">
+            <div class="five-section-content">
                 <h3>INSPIREZ-VOUS DE<br>
                     NOS RÉALISATIONS UNIQUES !</h3>
                 <p>Découvrez comment nos <span class="orange">artistes</span> ont su mettre en avant
@@ -71,7 +71,7 @@
             <div id="five-section-content-2" class="background-right"></div>
         </section>
     <section id="fourth-section" class="section reveal" data-midnight="white" data-anchor="slide5">
-        <div class="second-section-content">
+        <div class="fourth-section-content">
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="https://lugh-france.us18.list-manage.com/subscribe/post?u=5409c1dcec9fe953676d330f0&amp;id=0d34c28f96" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
