--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
         <h2>La plateforme créative qui réunit<br>
             <span class="orange">artistes</span> et <span class="blue">entreprises</span></h2>
             <div id="div-btn-artent">
-                <a href="#second-section" class="js-section-scroll">Je suis une entreprise</a>
+                <a href="#second-section" id="a-entreprise" class="js-section-scroll">Je suis une entreprise</a>
                 <a href="#third-section" class="js-section-scroll">Je suis un artiste</a>
             </div>
 
@@ -22,7 +22,7 @@
 
     <section id="second-section" class="section reveal" data-midnight="white" data-anchor="slide2">
 
-        <div class="second-section-content">
+        <div class="second-section-content" id="second-section-content">
             <h3>CHOISISSEZ L’ART<br>
                 POUR ÊTRE UNIQUE !</h3>
             <p>Avec Lugh, trouvez le <span class="blue">projet artistique</span> qui correspond à votre entreprise pour véhiculer et mettre en avant vos <span class="blue">valeurs</span>.
@@ -37,7 +37,7 @@
     </section>
     <section id="third-section" class="section reveal" data-midnight="black" data-anchor="slide3">
 
-        <div class="second-section-content">
+        <div id="third-section-content" class="second-section-content">
         <h3>CRÉEZ ET EXPOSEZ<br>
             SANS RIEN DÉPENSER !</h3>
             <p>Vous souhaitez mettre en avant votre <span class="orange">talent</span> et bénéficiez d’une <span class="orange">exposition</span> ?<br><br>
@@ -54,7 +54,7 @@
     </section>
         <section id="five-section" class="section reveal" data-midnight="white" data-anchor="slide4">
 
-            <div class="second-section-content">
+            <div id="five-section-content" class="second-section-content">
                 <h3>INSPIREZ-VOUS DE<br>
                     NOS RÉALISATIONS UNIQUES !</h3>
                 <p>Découvrez comment nos <span class="orange">artistes</span> ont su mettre en avant
@@ -71,7 +71,7 @@
             <div id="five-section-content-2" class="background-right"></div>
         </section>
     <section id="fourth-section" class="section reveal" data-midnight="white" data-anchor="slide5">
-        <div class="second-section-content">
+        <div id="fourth-section-content" class="second-section-content">
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="https://lugh-france.us18.list-manage.com/subscribe/post?u=5409c1dcec9fe953676d330f0&amp;id=0d34c28f96" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
