--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -14,12 +14,13 @@ body{
 }
 
 .sidebar {
-    position: absolute;
+    position: fixed;
     z-index: 300;
     right: 8%;
     top: 3%;
     height: 80vh;
     margin-top: 10vh;
+    width: 13vw;
 }
 
 .sidebar nav ul {
@@ -415,7 +416,7 @@ h1{
 #div-logo{
     width: 7%;
     margin: auto;
-    position: absolute;
+    position: fixed;
     top: 2vw;
     left: 2vw;
 }
@@ -439,7 +440,6 @@ h1{
 }
 #first-section-content-2{
     background-image: url("../img/IMG1-HOME.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
@@ -481,10 +481,32 @@ h1{
 
 }
 
+.login-section-content{
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 70%;
+    margin-left: 3vw;
+    opacity: 1;
+    transition: 1s;
+}
+
 .second-section-content{
     margin-top: auto;
     margin-bottom: auto;
     width: 70%;
+    margin-left: -30vw;
+    opacity: 1;
+    transition: 1s;
+}
+.background-right{
+    position: absolute;
+    width: 30vw;
+    height: 100vh;
+    right: 0;
+}
+.opacity{
+    opacity: 1;
+    transition: 1s;
     margin-left: 3vw;
 }
 .second-section-content h3{
@@ -500,51 +522,32 @@ h1{
 }
 #second-section-content-2{
     background-image: url("../img/IMG2-HOME-ENTREPRISE.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #third-section-content-2{
     background-image: url("../img/IMG4-HOME-ARTISTE.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #five-section-content-2{
     background-image: url("../img/IMG3-HOME-GALLERIE.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 #fourth-section-content-2{
     background-image: url("../img/IMG5-HOME-NEWSLETTER.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 
 #connexion-section-2{
     background-image: url("../img/IMG-CONNEXION.jpg");
-    width: 30%;
     background-size: 100%;
     background-repeat: no-repeat;
 }
 
-#third-section-content{
-    width: 70%;
-    margin: auto;
-    font-size: 2vw;
-    text-align: center;
-    font-weight: 700;
-}
 
-#fourth-section-content{
-    width: 70%;
-    margin: auto;
-    font-size: 1vw;
-    text-align: center;
-    font-weight: 600;
-}
 
 
 
@@ -622,9 +625,7 @@ form h3{
     height: 30px;
 }
 
-#mc_embed_signup_scroll{
-margin-left: 3vw;
-}
+
 
 #copyright {
     width: 40%;
