--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,25 +128,34 @@
                 if (window.location.hash == '#slide1') {
                     $('.singe-entreprise').addClass('singe-active')
                     $('.link-entreprise').addClass('link-active');
+                    $('#first-section-content').addClass('opacity')
 
                 }
                 else {
                     $('.singe-entreprise').removeClass('singe-active');
                     $('.link-entreprise').removeClass('link-active');
+                    $('#first-section-content').removeClass('opacity')
 
                 }
             });
+            
+            $("#a-entreprise").click( function (event) {
+                
+                }
+            )
 
 
             $(window).bind('hashchange', function() {
                 if (window.location.hash == '#slide2') {
                     $('.singe-artiste').addClass('singe-active');
                     $('.link-artiste').addClass('link-active');
+                    $('#second-section-content').addClass('position-finale')
 
                 }
                 else {
                     $('.singe-artiste').removeClass('singe-active');
                     $('.link-artiste').removeClass('link-active');
+                    $('#second-section-content').removeClass('position-finale')
                 }
             });
 
@@ -155,11 +164,13 @@
                 if (window.location.hash == '#slide3') {
                     $('.singe-galerie').addClass('singe-active');
                     $('.link-galerie').addClass('link-active');
+                    $('#third-section-content').addClass('opacity')
 
                 }
                 else {
                     $('.singe-galerie').removeClass('singe-active');
                     $('.link-galerie').removeClass('link-active');
+                    $('#third-section-content').removeClass('opacity')
                 }
             });
 
@@ -168,11 +179,13 @@
                 if (window.location.hash == '#slide4') {
                     $('.singe-connexion').addClass('singe-active');
                     $('.link-connexion').addClass('link-active');
+                    $('#five-section-content').addClass('opacity')
 
                 }
                 else {
                     $('.singe-connexion').removeClass('singe-active');
                     $('.link-connexion').removeClass('link-active');
+                    $('#five-section-content').removeClass('opacity')
                 }
             });
 
@@ -181,11 +194,14 @@
                 if (window.location.hash == '#slide5') {
                     $('.singe-contact').addClass('singe-active');
                     $('.link-contact').addClass('link-active');
+                    $('#fourth-section-content').addClass('opacity')
+
 
                 }
                 else {
                     $('.singe-contact').removeClass('singe-active');
                     $('.link-contact').removeClass('link-active');
+                    $('#fourth-section-content').removeClass('opacity')
                 }
             });
 
